# flight_concierge_ui

./: .env.example  .gitignore  Procfile  README.md  app.py  pyproject.toml
static/css/: style.css
static/js/: chat.js
templates/: index.html
