[project]
name = "flight-concierge-ui"
version = "0.1.0"
description = "Conversational web UI for the Flight Concierge agent"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask>=3.1",
    "gunicorn>=23.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32",
]

[project.scripts]
dev = "flask:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
